fix the svg on top gap too

--- a/css/core.css
+++ b/css/core.css
@@ -198,6 +198,7 @@ button.arrow-only {
   display: block;
   transition: all 0.5s ease;
   margin-top: -2px;
+  margin-bottom: -2px;
 }
 
 .left-triangle {
